tests/negative/unclosed_string.xs
-- EXPECT_ERROR
let x = "unterminated
